Closes #1260. Add container to prevent overlapping scroll

--- a/app/style/GetStarted.less
+++ b/app/style/GetStarted.less
@@ -73,6 +73,14 @@
   .settings-column-title {
     font-size: 27px;
   }
+
+  .log-container {
+    float: left;
+    margin-top: 10px;
+    max-height: 490px;
+    width: 100%;
+    overflow-y: scroll;
+  }
 }
 
 .getstarted.loader {
